# SimpleACL

./: .gitignore  ACL.h  CMakeLists.txt  README.md  main.cpp  resource.cpp  resource.h  subject.cpp  subject.h
tests/: ACLTests.cpp  CMakeLists.txt
